--- a/index.html
+++ b/index.html
@@ -1,38 +1,4 @@
 ---
-layout: splash
-permalink: /splash-page/
+layout: home
 author_profile: true
-date: 2020-12-07
-header:
-  overlay_color: "#000"
-  overlay_filter: "0.5"
-  overlay_image:/_pics/sky.png
-caption: "Photo credit: ** Kuan-Hung Yeh**
-excerpt: "This is Kuan-Hung Yeh's Personal Website"
-feature_row:
-  - image_path: _pics/landscape.png
-    alt: "Recent "
-    title: "Recent debates on general testing"
-    excerpt: "There was a fierce debate “again” in Taiwan recently on general testing for coronavirus. However, this time the problem is not about screening all citizens but all arrivals at borders, worrying about the risk of asymptomatic carriers."
-    url: "https://peterntuph.github.io/Recent-debates-on-general-testing/"
-    btn_label: "Read More"
-    btn_class: "btn--primary"
-  - image_path: _pics/Mitsui.png
-    image_caption: "Image courtesy of **Mitsui Park**"
-    alt: "placeholder image 2"
-    title: "Whether screen general public or not"
-    excerpt: "Due to the outbreak of COVID-19, millions of people have lived in fear of being infected by this contagious and fatal virus."
-    url: "https://peterntuph.github.io/Whether-screen-all-citizens-or-not/"
-    btn_label: "Read More"
-    btn_class: "btn--primary"
-  - image_path: _pics/sunset.png
-    title: "Basic Techniques in Markdown"
-    excerpt: "This is my first post that shows some basic techniques in Markdown"
-    url: "https://peterntuph.github.io/my-first-post/"
-    btn_label: "Read More"
-    btn_class: "btn--primary"    
 ---
-
-{% include feature_row id="intro" type="center" %}
-
-{% include feature_row %}
