--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 ---
 layout: home
 author_profile: true
+header:
+  image: https://raw.githubusercontent.com/Peterntuph/peterntuph.github.io/master/_pics/sky.png
 ---
