--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: home
 author_profile: true
 header:
-  image: https://raw.githubusercontent.com/Peterntuph/peterntuph.github.io/master/_pics/sky2.png
+  image: https://raw.githubusercontent.com/Peterntuph/peterntuph.github.io/master/_pics/sunset2.png
 ---
